fix display bug on IE

--- a/player/src/APlayer.scss
+++ b/player/src/APlayer.scss
@@ -44,7 +44,7 @@ $aplayer-height-lrc: $aplayer-height + $lrc-height;
     border-radius: 2px;
     overflow: hidden;
     user-select: none;
-    line-height: initial;
+    line-height: normal;
 
     * {
         box-sizing: content-box;
